k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: novapay

spec:
  replicas: 2

  selector:
    matchLabels:
      app: novapay

  template:
    metadata:
      labels:
        app: novapay

    spec:
      containers:
        - name: novapay

          image: alokdocker8700/novapay:v1

          imagePullPolicy: Always

          ports:
            - containerPort: 4000

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"

            limits:
              memory: "256Mi"
              cpu: "500m"      

          livenessProbe:
            httpGet:
              path: /api/health
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 20

          readinessProbe:
            httpGet:
              path: /api/health
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
