k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: novapay-service

spec:
  type: ClusterIP

  selector:
    app: novapay

  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
